# rust-on-riscv-starter-kit

./: Cargo.toml  README.md  linker.ld
.cargo/: config.toml
src/: main.rs
